force-app/main/default/objects/NPS_Survey__c/fields/Case_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Category__c</fullName>
    <label>Case Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>