force-app/main/default/objects/NPS_Survey__c/fields/CSI__c.field-meta.xml
<CustomField>
    <fullName>CSI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSI</label>
    <type>Checkbox</type>
</CustomField>