force-app/main/default/objects/NPS_Survey__c/fields/Dectractors__c.field-meta.xml
<CustomField>
    <fullName>Dectractors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dectractors</label>
    <type>Checkbox</type>
</CustomField>