force-app/main/default/objects/NPS_Survey__c/fields/Passive__c.field-meta.xml
<CustomField>
    <fullName>Passive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passive</label>
    <type>Checkbox</type>
</CustomField>