force-app/main/default/objects/NPS_Survey__c/fields/Promoters__c.field-meta.xml
<CustomField>
    <fullName>Promoters__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Promoters</label>
    <type>Checkbox</type>
</CustomField>