force-app/main/default/objects/NPS_Survey__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <type>TextArea</type>
</CustomField>