force-app/main/default/objects/NPS_Survey__c/fields/Survey_Invitation__c.field-meta.xml
<CustomField>
    <fullName>Survey_Invitation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Invitation</label>
    <referenceTo>SurveyInvitation</referenceTo>
    <relationshipLabel>NPS Surveys</relationshipLabel>
    <relationshipName>NPS_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>