force-app/main/default/objects/NPS_Survey__c/fields/Survey_Question__c.field-meta.xml
<CustomField>
    <fullName>Survey_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Question</label>
    <referenceTo>SurveyQuestion</referenceTo>
    <relationshipLabel>NPS Surveys</relationshipLabel>
    <relationshipName>NPS_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>