force-app/main/default/objects/NPS_Survey__c/fields/Survey_Question_Response__c.field-meta.xml
<CustomField>
    <fullName>Survey_Question_Response__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Question Response</label>
    <referenceTo>SurveyQuestionResponse</referenceTo>
    <relationshipLabel>NPS Surveys</relationshipLabel>
    <relationshipName>NPS_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>