force-app/main/default/objects/NPS_Survey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Hasil_Nilai_Survey__c</columns>
    <columns>Type_Question__c</columns>
    <columns>Promoters__c</columns>
    <columns>Passive__c</columns>
    <columns>Dectractors__c</columns>
    <columns>CSI__c</columns>
    <columns>Survey_Question__c</columns>
    <columns>Case_Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>